// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelect > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-2 el-multi-select"
  >
    <span>
      Some Value
    </span>
  </div>
</DocumentFragment>
`;

exports[`MultiSelectChip > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <input
    aria-hidden="true"
    class="mocked-styled-0 el-multi-select-checkbox"
    id="test-id"
    type="checkbox"
  />
  <label
    class="mocked-styled-1 el-multi-select-label"
    for="test-id"
    role="option"
  >
    <span>
      Some Value
    </span>
  </label>
</DocumentFragment>
`;

exports[`MultiSelectInput > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-6 el-multi-select-input-wrapper"
  >
    <input
      class="mocked-styled-5 el-multi-select-input"
      id="react-example"
    />
    <div
      aria-label="Multi selected options"
      class="mocked-styled-3 el-multi-select-selected"
      role="listbox"
    >
      <input
        aria-checked="true"
        aria-hidden="true"
        checked=""
        class="mocked-styled-0 el-multi-select-checkbox"
        id="multi-select-chip-item-one"
        role="option"
        type="checkbox"
      />
      <label
        class="mocked-styled-1 el-multi-select-label"
        for="multi-select-chip-item-one"
        role="option"
        tabindex="0"
      >
        Item one
      </label>
    </div>
    <div
      aria-label="Multi unselected options"
      class="mocked-styled-4 el-multi-select-un-selected"
      role="listbox"
    >
      <input
        aria-checked="false"
        aria-hidden="true"
        class="mocked-styled-0 el-multi-select-checkbox"
        id="test-static-id"
        role="option"
        type="checkbox"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="test-static-id"
        role="option"
        tabindex="0"
      >
        Item two
      </label>
      <input
        aria-checked="false"
        aria-hidden="true"
        class="mocked-styled-0 el-multi-select-checkbox"
        id="test-static-id"
        role="option"
        type="checkbox"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="test-static-id"
        role="option"
        tabindex="0"
      >
        Item three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelectInput > should match a snapshot and render non selected message where there are no selected items 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-6 el-multi-select-input-wrapper"
  >
    <input
      class="mocked-styled-5 el-multi-select-input"
      id="react-example"
    />
    <div
      aria-label="Multi selected options"
      class="mocked-styled-3 el-multi-select-selected"
      role="listbox"
    >
      <svg
        class="el-icon el-ml2"
        color="secondary"
        data-size="100%"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
        />
      </svg>
      <p>
        No items selected
      </p>
    </div>
    <div
      aria-label="Multi unselected options"
      class="mocked-styled-4 el-multi-select-un-selected"
      role="listbox"
    >
      <input
        aria-checked="false"
        aria-hidden="true"
        class="mocked-styled-0 el-multi-select-checkbox"
        id="test-static-id"
        role="option"
        type="checkbox"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="test-static-id"
        role="option"
        tabindex="0"
      >
        Item one
      </label>
      <input
        aria-checked="false"
        aria-hidden="true"
        class="mocked-styled-0 el-multi-select-checkbox"
        id="test-static-id"
        role="option"
        type="checkbox"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="test-static-id"
        role="option"
        tabindex="0"
      >
        Item two
      </label>
      <input
        aria-checked="false"
        aria-hidden="true"
        class="mocked-styled-0 el-multi-select-checkbox"
        id="test-static-id"
        role="option"
        type="checkbox"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="test-static-id"
        role="option"
        tabindex="0"
      >
        Item three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelectSelected > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-3 el-multi-select-selected"
  >
    <span>
      Some Value
    </span>
  </div>
</DocumentFragment>
`;

exports[`MultiSelectUnSelected > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-4 el-multi-select-un-selected"
  >
    <span>
      Some Value
    </span>
  </div>
</DocumentFragment>
`;
